Closed Bug 1189162 Opened 9 years ago Closed 9 years ago

TEST-UNEXPECTED-FAIL | dom/tests/mochitest/gamepad/test_gamepad.html | undefined assertion name

Categories

(Core :: DOM: Core & HTML, defect)

Other Branch
ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox40 --- wontfix
firefox41 --- fixed
firefox42 --- fixed
firefox-esr38 --- unaffected

People

(Reporter: hiro, Assigned: hiro)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

This failure has not been filed yet, happened couple of times on try server. 20:31:23 INFO - 600 INFO TEST-UNEXPECTED-FAIL | dom/tests/mochitest/gamepad/test_gamepad.html | undefined assertion name 20:31:23 INFO - connecthandler@dom/tests/mochitest/gamepad/test_gamepad.html:22:1 20:31:23 INFO - @dom/tests/mochitest/gamepad/test_gamepad.html:20:1 https://treeherder.mozilla.org/logviewer.html#?job_id=9937986&repo=try https://treeherder.mozilla.org/logviewer.html#?job_id=9902536&repo=try https://treeherder.mozilla.org/logviewer.html#?job_id=9894967&repo=try
The failure line is : ok(e.gamepad.timestamp <= performance.now()); The timestamp of the gamepad seems somehow wrong there.
I am guessing the failure reason is http://hg.mozilla.org/mozilla-central/rev/48ae8b5e62ab I do not have the permission to see bug 1167489 and bug 1153672 unfortunately. Should we do the same thing in Gamepad::UpdateTimestamp(), or modify the failure test? I am confident that bug 1182285 is caused by the same reason.
Flags: needinfo?(bzbarsky)
Indeed, if we're chopping off fractions of 5us from the rhs, then the inequality could test false. And yes, sounds like we should similarly clamp the gamepad timestamp. And add an actual assertion name to that ok() call.
Flags: needinfo?(bzbarsky)
Uses Performance::Now() instead of conversion with TimeStampToDOMHighRes().
Assignee: nobody → hiikezoe
Attachment #8640971 - Flags: review?(bzbarsky)
Comment on attachment 8640971 [details] [diff] [review] A patch suggedted by comment #3 Nice! r=me
Attachment #8640971 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Is this worth backporting to 41?
Flags: needinfo?(hiikezoe)
Probably, yes.
Comment on attachment 8640971 [details] [diff] [review] A patch suggedted by comment #3 Approval Request Comment [Feature/regressing bug #]: This is a relevant bug of bug 1167489 and bug 1153672. [User impact if declined]: Exposed timing attacks [Describe test coverage new/current, TreeHerder]: There were two tests which had been failed intermittently. This patch fixed those. [Risks and why]: low [String/UUID change made/needed]: none
Flags: needinfo?(hiikezoe)
Attachment #8640971 - Flags: approval-mozilla-aurora?
Comment on attachment 8640971 [details] [diff] [review] A patch suggedted by comment #3 Let's uplift to Aurora if this helps fix intermittent test failure. Fix seems straightforward and has been in m-c for a few days so should be stable.
Attachment #8640971 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: