Bug 1189162 - Clamp gamepad.timestamp and VideoPlaybackQuality.creationTime. r=bz, a=ritu