dom/html/HTMLVideoElement.cpp
@@ -209,7 +209,7 @@ HTMLVideoElement::GetVideoPlaybackQuality()
     if (window) {
       nsPerformance* perf = window->GetPerformance();
       if (perf) {
-        creationTime = perf->GetDOMTiming()->TimeStampToDOMHighRes(TimeStamp::Now());
+        creationTime = perf->Now();
       }
     }
 
